
{{$NEXT}}

 - uncommented Net::Server in Prereqs/Recommended section
 - added INSTALL
 - updated dmarc_httpd description to note validation feature
 - updated public_suffix_list

1.20140210 2014-02-09 America/Los_Angeles

 - NEW FEATURE: added HTTP validation service (see dmarc_httpd)
 - install_deps: install optional prereqs by default
 - added Best Current Practices link on main page
 - minor tweaks to Pod (Ricardo Signes)
 - PurePerl: added comments about Sender header
    when message has multiple-address format used in the From header
 - updated public_suffix_list

1.20130906 2013-09-06 America/Los_Angeles

 - handle errors encountered when reporting address is illegal
 - delete reports that return a SMTP 5XX code for the recipient
 - delete reports after encountering 12 errors
 - added 'too big' notices when report size exceeds limit
 - updated install_deps.pl

1.20130625 2013-06-24 America/Los_Angeles

 - added a bunch of tests from http://dmarc-qa.com
 - URI: supress undef error if URI scheme not defined
 - policy->parse: properly parse records with unnecessary trailing ;
 - reporting is 'external' based on Org Domain (was email domain)

1.20130616 2013-06-16 America/Los_Angeles

 - combined update/replace SQL methods
 - dmarc_view_reports: fix duplicated variable name

1.20130615 2013-06-15 America/Los_Angeles

 - bug fixes and purge unused classes

1.20130614 2013-06-13 America/Los_Angeles

 - Added whitelist feature
 - SMTP: remove Subject: Report-ID <braces>
 - SMTP: more types of SMTP errors are stored and reported
 - dmarc_send_reports: added verbose option
 - dmarc_view_reports: fix for searches with MySQL backend

1.20130612 2013-06-11

 -  dmarc_view_reports: improve gentoo support by adding /usr
    to search path for GeoIP DBs on gentoo - Benny Pedersen

1.20130610 2013-06-10

 - tolerate receiving reports with no records (ahem, hotmail.com)
 - simplify SMTP flow-of-control, additional SMTP tests